feat: user deposits
